# OmniCloud-Full

./: .$Architecture.drawio.bkp  .$Architecture.drawio.dtmp  .gitignore  .gitmodules  Architecture.drawio  CONDUCT.md  Cargo.toml  INTEGRATION.md  Makefile  README.md  cargo.toml  config.json  docker-compose.yml  full-test.sh  package-lock.json  providers.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: rust.yml  wiki.yml
.github/workflows/scripts/: gen-docs.py
Notes/: Omni_Bootstrap.md  Omni_Deploy.md  Omni_Recovery.md  Omni_Scaling.md  Omni_Storage.md  Omni_Upgrade.md  README.md
Notes/CLI/: README.md
Notes/CLI/commands/: backup.md  config.md  hosts.md  init.md  logs.md  push.md  rollback.md  scale.md  service.md  status.md  up.md
Notes/DevGuides/Dashboard/: Routes-and-Auth.md
Notes/administration/: App_Scaling.md  Cloud_Upgrade.md  VPlatforms.md
Notes/diagrams/: Architecture.drawio
Notes/integration/: CPI-Standardization.md  CPIs.md
Notes/networking/: Lodestone.md  Omni_Lodestone.md
Notes/usage/Automation/: CI-CD.md
config/: cloud-config.json
crates/VirtualBox/: Cargo.toml
crates/VirtualBox/src/: config.rs  error.rs  events.rs  handlers.rs  lib.rs  operations.rs  utils.rs
crates/features/vm-management-feature/: Cargo.toml
crates/features/vm-management-feature/src/: lib.rs
crates/features/worker-management/: Cargo.toml
crates/features/worker-management/src/: lib.rs
crates/integration-test/: Cargo.toml
crates/integration-test/src/: main.rs
crates/providers/.claude/: settings.local.json
crates/providers/vbox/: Cargo.toml
crates/providers/vbox/src/: lib.rs
crates/shared/event-registry/: Cargo.toml
crates/shared/event-registry/src/: lib.rs
crates/shared/feature-traits/: Cargo.toml
crates/shared/feature-traits/src/: lib.rs
crates/shared/ffi-macros/: Cargo.toml
crates/shared/ffi-macros/src/: lib.rs
crates/shared/plugin-macros/: Cargo.toml
crates/shared/plugin-macros/src/: lib.rs
crates/shared/registration-macros/: Cargo.toml
crates/shared/registration-macros/src/: lib.rs
crates/test-loader/: Cargo.toml
crates/test-loader/src/: main.rs
docker/: docker-compose.yml
docker/clickhouse-config/: docker_related_config.xml
docker/clickhouse-users/: default-user.xml
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
