[package]
name = "virtualbox-plugin"
version = "1.0.0"
edition = "2021"

[lib]
name = "virtualbox_plugin"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
omni-director = { path = "../OmniDirector" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true