[package]
name = "test-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
omni-feature-traits = { path = "../shared/feature-traits" }
omni-event-registry = { path = "../shared/event-registry" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"