[package]
name = "omni-vbox-provider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
omni-feature-traits = { path = "../../shared/feature-traits" }
omni-registration-macros = { path = "../../shared/registration-macros" }
omni-event-registry = { path = "../../shared/event-registry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"