[package]
name = "omni-vbox-provider"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
omni-ffi-macros = { path = "../../shared/ffi-macros" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"